# drift

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
beacon_replicator/: cli.py  data.py  features.py  model.py  output.py  schema.py
src/: config.ts  db.ts  server.ts
src/adapters/: index.ts  simulationAdapter.ts  types.ts
src/adapters/live/: ecwVendorAdapter.ts  fhirFetcherStub.ts
src/api/: auth.ts  routes.ts
src/drift/: engine.ts
src/public/: app.js  index.html  styles.css
src/services/: financeService.ts  patientHealthService.ts  queryService.ts  scoringService.ts  taskService.ts
src/simulation/: clock.ts  generator.ts  icd10.ts  rng.ts  seeder.ts
src/types/: domain.ts
src/utils/: time.ts
test/: driftEngine.test.ts
tests/: conftest.py  test_end_to_end.py
