[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-replicator"
version = "0.1.0"
description = "Train models on historical audit data and score new claim lines."
requires-python = ">=3.10"
dependencies = [
    "lightgbm>=4.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
beacon = "beacon_replicator.cli:main"

[tool.setuptools.packages.find]
include = ["beacon_replicator*"]
exclude = ["test*", "tests*", "src*", "dist*", "node_modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
